--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^3.1.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
+    "react-datepicker": "^7.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.17.0"
