--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "date-fns": "^3.1.0",
+    "axios": "1.6.2",
+    "date-fns": "3.1.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
-    "react-datepicker": "^7.2.0",
-    "react-day-picker": "^8.10.0",
+    "react-datepicker": "7.2.0",
+    "react-day-picker": "8.10.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.17.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "@vitejs/plugin-react-swc": "3.3.2",
+    "eslint": "8.45.0",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.3",
+    "vite": "4.4.5"
   }
 }
