--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-datepicker": "7.2.0",
     "react-day-picker": "8.10.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.17.0"
+    "react-router-dom": "6.17.0",
+    "sonner": "1.5.0"
   },
   "devDependencies": {
     "@types/react": "18.2.15",
