--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "1.6.2",
+    "axios": "^1.6.2",
+    "clsx": "^2.1.1",
     "date-fns": "3.1.0",
+    "framer-motion": "^11.3.24",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-datepicker": "7.2.0",
