--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "sonner": "1.5.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "3.3.2",
     "eslint": "8.45.0",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.3",
     "vite": "^4.5.3",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.1"
   }
 }
