--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.3",
     "happy-dom": "^15.7.4",
-    "vite": "^4.5.3",
-    "vitest": "^2.1.1"
+    "vite": "^4.5.3"
   }
 }
